--- a/calculator.html
+++ b/calculator.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Calculator - Gheorghe Marin Adrian</title>
+        <title>Calculator - Alia Allias</title>
     </head>
     <body>
         <div id='calc-contain'>
@@ -38,7 +38,7 @@
     
           </form>
           <div id="agh">
-            <p>Adrian Gheorghe Calc
+            <p>Alia Allias Calc
           </div>
         </div>
     </body>
